RESOLVED FIXED210295
Fix for crash in test accessibility/Mac/aria-grid-with-strange-hierarchy.html in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=210295
Summary Fix for crash in test accessibility/Mac/aria-grid-with-strange-hierarchy.html...
Andres Gonzalez
Reported 2020-04-09 12:07:57 PDT
Fix for crash in test accessibility/Mac/aria-grid-with-strange-hierarchy.html in isolated tree mode.
Attachments
Patch (7.97 KB, patch)
2020-04-09 12:28 PDT, Andres Gonzalez
no flags
Patch (7.97 KB, patch)
2020-04-09 13:18 PDT, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2020-04-09 12:28:23 PDT
chris fleizach
Comment 2 2020-04-09 12:35:53 PDT
Comment on attachment 395989 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=395989&action=review > Source/WebCore/ChangeLog:20 > + - Added strcter assert checks to catch problems with the management of stricter > Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:217 > auto object = nodeForID(axObjectID); should we assert that the lock is hold in nodeForID() ?
Andres Gonzalez
Comment 3 2020-04-09 13:18:51 PDT
EWS
Comment 4 2020-04-09 14:55:57 PDT
Committed r259832: <https://trac.webkit.org/changeset/259832> All reviewed patches have been landed. Closing bug and clearing flags on attachment 395995 [details].
Radar WebKit Bug Importer
Comment 5 2020-04-09 14:56:14 PDT
Note You need to log in before you can comment on or make changes to this bug.